--- a/src/app/project/project.style.scss
+++ b/src/app/project/project.style.scss
@@ -42,7 +42,7 @@
     top: 50%;
     left: 50%;
     
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -75%);
 }
 
 .slider-container, moo-image {
@@ -113,4 +113,8 @@ a {
 a:not(:focus):not(:active):hover {
 	transition: color 2s cubic-bezier(0.35, 0, 0.25, 1);
 	color: black;
+}
+
+.title {
+	font-size: $mobileBigFontSize;
 }
